--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
-
+<div class="hero-unit">
+ 
 <h1>Welcome to One Month Rails!</h1>
 <p>
 	You've found the home page for
@@ -6,9 +7,9 @@
 	 application.
 </p>
 <p>
-	<%=link_to "Sign Up Now!", "#" %>
+	<%=link_to "Sign Up Now!", "#", class: "btn btn-primary btn-large" %>
 
 
 
 </p>
-
+</div>
